[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://_levels/scripts/level_01.gd" type="Script" id=3]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.708099, 0.407242, 0, 0, 0, 0, 480.834, 0.407242, 0, 0, 0, 0, 481.983, 720.147, 0, 0, 0, 0, 1.83093, 720.988, 0, 0, 0, 0, 0.708099, 0.407242 )
}

[node name="Level_01" type="Node"]
script = ExtResource( 3 )
mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.352941, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0.708099, 0.407242 )
rotation = -1.52485e-08

[node name="PlayerStartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sound_FX"
